# DINOv3-ActionGenome-Detector

./: .gitignore  README.md  __init__.py  ag_dataset.py  detector_eval.py  dinov3_fasterrcnn.py  pyproject.toml  requirements.txt  train.py
